tests/negative/regression/r8.orng
const a : ? ( _ = Float , _ = Float ) . b . String = case | _ = a 